Major change: multiple son calls
to do: split rendering from index.js on multiple divs instead of
overwriting div with id campaign

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,16 @@
     <title>ResponseConcepts v.3.0</title>
   </head>
   <body>
+  <!--
+  Step Managers take care of steps. Leave it as it is.
+  -->
+  <div id="stepmanagers"></div>
+    <!--
+  The -unique- div id gives the name to data under _campaign. data-json provides the path
+  to the json file, locally or remote.
+  -->
+    <!--<div id="senseo" data-json="GET_OK_nogame.json"></div>-->
+   <div id="smarties" data-json="GET_OK.json"></div>
     <div id="campaign"></div>
     <!--
       This HTML file is a template.
