added flow and rendering

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,8 @@
   The -unique- div id gives the name to data under _campaign. data-json provides the path
   to the json file, locally or remote.
   -->
-    <!--<div id="senseo" data-json="GET_OK_nogame.json"></div>-->
-   <div id="smarties" data-json="GET_OK.json"></div>
-    <div id="campaign"></div>
+    <div id="senseo" data-json="GET_OK_nogame.json"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
